--- a/config/database.yml
+++ b/config/database.yml
@@ -12,8 +12,11 @@ default: &default
 
 development:
   <<: *default
+  adapter: postgresql
+  host: localhost
   database: russian_translation/development
   template: template0
+ 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
