--- a/config/database.yml
+++ b/config/database.yml
@@ -7,25 +7,24 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: 5
-  timeout: 5000
+  template: template0 
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: russian_translation/development
-  template: template0
+  database: russian-translation_development
  
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: russian_translation/test
-  template: template0
+  database: russian-translation_test
 
 production:
   <<: *default
-  database: russian_translation/production
-  template: template0
-  username: ubuntu
-password: 
+  database: russian-translation_production
+  username: shine
+  password: <%= ENV['SHINE_DATABASE_PASSWORD'] %>
